@@ -1,22 +1,20 @@
 package org.talk.is.cheap.project.free.flow.scheduler.task.service;
 
 
-import com.google.common.base.VerifyException;
+import io.vavr.Tuple2;
+import io.vavr.Tuple3;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.talk.is.cheap.project.free.flow.common.enums.StartupSourceType;
 import org.talk.is.cheap.project.free.flow.common.enums.TaskStageStatus;
-import org.talk.is.cheap.project.free.flow.common.message.impl.worker.StartWorkerStageReq;
-import org.talk.is.cheap.project.free.flow.common.message.impl.worker.StartWorkerStageResp;
 import org.talk.is.cheap.project.free.flow.common.utils.VerifyUtil;
 import org.talk.is.cheap.project.free.flow.scheduler.cluster.service.WorkerClusterManager;
 import org.talk.is.cheap.project.free.flow.scheduler.task.client.WorkerTaskDriverClient;
 import org.talk.is.cheap.project.free.flow.starter.repository.config.RepositoryAutoConfig;
 import org.talk.is.cheap.project.free.flow.starter.repository.dao.mbg.query.example.StageStartupExample;
-import org.talk.is.cheap.project.free.flow.starter.repository.dao.mbg.query.example.TaskGraphDefinitionExample;
-import org.talk.is.cheap.project.free.flow.starter.repository.dao.mbg.query.example.TaskStartupExample;
+import org.talk.is.cheap.project.free.flow.starter.repository.domain.es.pojo.ESPojoDTO;
 import org.talk.is.cheap.project.free.flow.starter.repository.domain.es.pojo.StageStartupParam;
 import org.talk.is.cheap.project.free.flow.starter.repository.domain.es.pojo.TaskSharedContext;
 import org.talk.is.cheap.project.free.flow.starter.repository.domain.pojo.StageDefinition;
@@ -24,14 +22,15 @@ import org.talk.is.cheap.project.free.flow.starter.repository.domain.pojo.StageE
 import org.talk.is.cheap.project.free.flow.starter.repository.domain.pojo.StageStartup;
 import org.talk.is.cheap.project.free.flow.starter.repository.domain.pojo.TaskDefinition;
 import org.talk.is.cheap.project.free.flow.starter.repository.domain.pojo.TaskExecution;
-import org.talk.is.cheap.project.free.flow.starter.repository.domain.pojo.TaskGraphDefinition;
 import org.talk.is.cheap.project.free.flow.starter.repository.domain.pojo.TaskStartup;
+import org.talk.is.cheap.project.free.flow.starter.repository.service.StageDefinitionService;
 import org.talk.is.cheap.project.free.flow.starter.repository.service.StageExecutionService;
 import org.talk.is.cheap.project.free.flow.starter.repository.service.StageStartupService;
 import org.talk.is.cheap.project.free.flow.starter.repository.service.TaskExecutionService;
 import org.talk.is.cheap.project.free.flow.starter.repository.service.TaskGraphDefinitionService;
 import org.talk.is.cheap.project.free.flow.starter.repository.service.TaskStartupService;
 import org.talk.is.cheap.project.free.flow.starter.repository.service.derived.StageDefinitionServiceWrapper;
+import org.talk.is.cheap.project.free.flow.starter.repository.service.derived.StageExecutionServiceWrapper;
 import org.talk.is.cheap.project.free.flow.starter.repository.service.derived.StageStartupServiceWrapper;
 import org.talk.is.cheap.project.free.flow.starter.repository.service.derived.TaskDefinitionServiceWrapper;
 import org.talk.is.cheap.project.free.flow.starter.repository.service.derived.TaskExecutionServiceWrapper;
@@ -40,11 +39,10 @@ import org.talk.is.cheap.project.free.flow.starter.repository.service.es.StageSt
 import org.talk.is.cheap.project.free.flow.starter.repository.service.es.TaskSharedContextService;
 
 import java.io.IOException;
-import java.net.URI;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -60,7 +58,11 @@ public class WorkerTaskDriverService {
     private StageStartupService stageStartupService;
     private StageExecutionService stageExecutionService;
     @Autowired
+    private StageExecutionServiceWrapper stageExecutionServiceWrapper;
+    @Autowired
     private StageDefinitionServiceWrapper stageDefinitionServiceWrapper;
+    @Autowired
+    private StageDefinitionService stageDefinitionService;
     @Autowired
     private TaskGraphDefinitionService taskGraphDefinitionService;
     @Autowired
@@ -96,14 +98,17 @@ public class WorkerTaskDriverService {
     private TaskScheduler taskScheduler;
 
     /**
-     * 在启动任务之前校验task，并且在数据库中创建任务数据，包括创建各种startup数据
+     * 在启动任务之前校验task，并且在数据库中创建任务数据，包括创建各种startup+execution数据，以便可以直接执行任务
+     * 不包括retry的情况，retry的执行不需要创建startup
+     * 引导worker设置初始化的共享上下文
      *
      * @param taskName
-     * @param taskVersion
+     * @param taskVersion 返回的是创建的执行任务的地址，taskExecutionId和stageExecutionIds
      */
 //    @Transactional(rollbackFor = Exception.class, transactionManager = RepositoryAutoConfig.TRANSACTION_MANAGER_BEAN_NAME)
-    public long prepareForTaskStart(String taskName, Integer taskVersion, String initialEncodedSharedContext,
-                                    Map<String, String> stageEncodedInputs) {
+    public Tuple3<String, Long, Map<String, Long>> prepareForTaskStart(String taskName, Integer taskVersion,
+                                                                       String initialEncodedSharedContext,
+                                                                       Map<String, String> stageEncodedInputs) {
         TaskDefinition taskDefinition = taskDefinitionServiceWrapper.queryByNameVersion(taskName, taskVersion);
 
         // 创建task的startup和execution
@@ -114,6 +119,12 @@ public class WorkerTaskDriverService {
         VerifyUtil.shallBeTrue(taskStartupService.create(taskStartup) > 0, "创建task启动记录失败");
 
         try {
+            taskSharedContextService.create(TaskSharedContext.builder()
+                    .taskStartupId(taskStartup.getId())
+                    .encodedTaskSharedContext(initialEncodedSharedContext)
+                    .updateTime(new Date()).build()
+            );
+
             String workerAddress = taskScheduler.assignTaskToWorkerAddress(taskName, taskDefinition.getVersion());
             VerifyUtil.shallNotBeBlank(workerAddress, "No node capable of executing this task can be found.");
 
@@ -123,36 +134,45 @@ public class WorkerTaskDriverService {
                     .withTaskStartupId(taskStartup.getId());
             VerifyUtil.shallBeTrue(taskExecutionService.create(taskExecution) > 0, "创建task执行记录失败");
 
-            taskSharedContextService.create(TaskSharedContext.builder()
-                    .taskExecutionId(taskExecution.getId())
-                    .taskSharedContextEncodingSnapshot(initialEncodedSharedContext)
-                    .updateTime(new Date()).build()
-            );
-
-
             // 创建stage的startup和execution
             List<StageDefinition> stageDefinitions = stageDefinitionServiceWrapper.selectByTaskId(taskDefinition.getId());
-
-            for (StageDefinition startStage : stageDefinitions.stream().filter(StageDefinition::getIsStartingStage).toList()) {
-                String stageName = startStage.getName();
-                String encodedInput = stageEncodedInputs.get(stageName);
+            Map<String, Long> rootStageName2ExecutionId = new HashMap<>();
+            for (StageDefinition stageDefinition : stageDefinitions) {
+                String stageName = stageDefinition.getName();
 
 
                 StageStartup stageStartup = new StageStartup()
                         .withTaskExecutionId(taskExecution.getId())
                         .withStatus(TaskStageStatus.PENDING.getStatus())
-                        .withStageId(startStage.getId());
+                        .withStageId(stageDefinition.getId());
 
-                VerifyUtil.shallBeTrue(stageStartupService.create(stageStartup) > 0, "Failed to create stage Start up");
+                VerifyUtil.shallBeTrue(stageStartupService.create(stageStartup) > 0, String.format("Failed to create stage startup: %s",
+                        stageName));
+                StageExecution stageExecution = new StageExecution()
+                        .withStageStartupId(stageStartup.getId())
+                        .withStatus(TaskStageStatus.PENDING.getStatus())
+                        .withWorkerAddress(workerAddress);
+                VerifyUtil.shallBeTrue(stageExecutionService.create(stageExecution) > 0, String.format("Failed to create stage execution:" +
+                        " %s", stageName));
 
-                stageStartupParamService.create(
-                        StageStartupParam.builder().stageStartupId(stageStartup.getId())
-                                .encodedInput(encodedInput)
-                                .encodedSharedContextSnapshotAtStartup(initialEncodedSharedContext)
-                                .updateTime(new Date())
-                                .build()
-                );
+                if (stageEncodedInputs.containsKey(stageName)) {
+                    String encodedInput = stageEncodedInputs.get(stageName);
+                    stageStartupParamService.create(
+                            StageStartupParam.builder().stageStartupId(stageStartup.getId())
+                                    .encodedInput(encodedInput)
+                                    .encodedSharedContextSnapshotAtStartup(initialEncodedSharedContext)
+                                    .updateTime(new Date())
+                                    .build()
+                    );
+                }
+
+                if (stageDefinition.getIsStartingStage()) {
+                    rootStageName2ExecutionId.put(stageName, stageExecution.getId());
+                }
             }
+
+
+            return new Tuple3<>(workerAddress, taskExecution.getId(), rootStageName2ExecutionId);
         } catch (IOException e) {
             log.error("error when prepare task", e);
             throw new RuntimeException(e);
@@ -160,126 +180,50 @@ public class WorkerTaskDriverService {
             taskStartup.setStatus(TaskStageStatus.FAILED.getStatus());
             taskStartupServiceWrapper.updateByIdSelective(taskStartup.getId(), taskStartup);
         }
-        return taskStartup.getId();
+
 
     }
 
 
-    /**
-     * 尝试驱动fromStageStartupId的下一个stage，返回下一个驱动的stage的startupId
-     *
-     * @param fromStageStartupId
-     * @throws IOException
-     */
-    public void driveNextStageFrom(long fromStageStartupId) throws IOException {
-
-        StageStartup fromStageStartup = stageStartupServiceWrapper.selectById(fromStageStartupId);
-        VerifyUtil.shallBeTrue(fromStageStartup != null,
-                "Cannot find a unique stageStartup record with id %d".formatted(fromStageStartupId));
-
-        StageDefinition fromStageDefinition = stageDefinitionServiceWrapper.selectById(fromStageStartup.getStageId());
-        VerifyUtil.shallBeTrue(fromStageDefinition != null,
-                "Cannot find a unique stageDefinition record with id %d".formatted(fromStageStartup.getStageId()));
-
-        TaskGraphDefinitionExample taskGraphDefinitionExample = new TaskGraphDefinitionExample();
-        taskGraphDefinitionExample.createCriteria().andFromStageIdEqualTo(fromStageStartup.getStageId());
-        List<TaskGraphDefinition> taskGraphDefinitions = taskGraphDefinitionService.selectByExample(taskGraphDefinitionExample);
-        if (taskGraphDefinitions.isEmpty()) {
-            StageStartupExample example = new StageStartupExample();
-            example.createCriteria().andStageIdIn(taskGraphDefinitions.stream().map(TaskGraphDefinition::getToStageId).toList())
-                    .andTaskExecutionIdEqualTo(fromStageStartup.getTaskExecutionId())
-                    .andStatusEqualTo(TaskStageStatus.PENDING.getStatus());
-            List<StageStartup> nextStageStartups = stageStartupService.selectByExample(example);
-            for (StageStartup nextStageStartup : nextStageStartups) {
-                driveStage(nextStageStartup.getId());
-            }
-        }
-
-    }
-
-    //    @Transactional(rollbackFor = Exception.class, transactionManager = RepositoryAutoConfig.TRANSACTION_MANAGER_BEAN_NAME)
-    public void driveStage(long stageStartupId) throws IOException {
-        StageStartup stageStartup = stageStartupServiceWrapper.selectById(stageStartupId);
-        VerifyUtil.shallBeTrue(stageStartup != null,
-                "Cannot find a unique stage startup record with id %d".formatted(stageStartupId));
-
-        StageDefinition stageDefinition = stageDefinitionServiceWrapper.selectById(stageStartup.getStageId());
-
-        TaskExecution taskExecution = taskExecutionServiceWrapper.selectById(stageStartup.getTaskExecutionId());
-        VerifyUtil.shallBeTrue(taskExecution != null,
-                "Cannot find a unique task execution record with id %d".formatted(stageStartup.getTaskExecutionId()));
-
+    @Transactional(rollbackFor = Exception.class, transactionManager = RepositoryAutoConfig.TRANSACTION_MANAGER_BEAN_NAME)
+    public Tuple2<Long, String> prepareStage(long taskExecutionId, String stageName,
+                                             String encodedSharedContextSnapshotAtStartup) throws IOException {
+        TaskExecution taskExecution = taskExecutionServiceWrapper.selectById(taskExecutionId);
+        VerifyUtil.shallNotBeNull(taskExecution, String.format("无法找到id为%d的taskExecution对象", taskExecutionId));
 
         TaskStartup taskStartup = taskStartupServiceWrapper.selectById(taskExecution.getTaskStartupId());
-        TaskDefinition taskDefinition = taskDefinitionServiceWrapper.selectById(taskStartup.getTaskId());
 
-        StageStartupParam startupParam = stageStartupParamService.getByStageStartupId(stageStartup.getId());
-        // 找到parent 的stage最后一个完成的，取其完成时的共享上下文作为运行时的初始上下文
-        TaskGraphDefinitionExample taskGraphDefinitionExample = new TaskGraphDefinitionExample();
-        taskGraphDefinitionExample.createCriteria()
-                .andToStageIdEqualTo(stageStartup.getStageId());
-        List<TaskGraphDefinition> taskGraphDefinitions = taskGraphDefinitionService.selectByExample(taskGraphDefinitionExample);
-        List<Long> parentStageIds =
-                taskGraphDefinitionService.selectByExample(taskGraphDefinitionExample).stream().map(TaskGraphDefinition::getFromStageId).toList();
-        String latestParentStageEncodedSharedContext = null;
-        if (!parentStageIds.isEmpty()) {
-            StageStartupExample example = new StageStartupExample();
-            example.createCriteria()
-                    .andTaskExecutionIdEqualTo(stageStartup.getTaskExecutionId())
-                    .andStageIdIn(parentStageIds);
-            List<StageStartup> parentStageStartups = stageStartupService.selectByExample(example);
-            StageStartup latestCompletionStartup = null;
-            for (StageStartup parentStageStartup : parentStageStartups) {
-                if (parentStageStartup.getCompletionTime() == null) {
-                    continue;
-                } else if (latestCompletionStartup == null || latestCompletionStartup.getCompletionTime().before(parentStageStartup.getCompletionTime())) {
-                    latestCompletionStartup = parentStageStartup;
-                }
-            }
-            if (latestCompletionStartup != null) {
-                latestParentStageEncodedSharedContext =
-                        stageStartupParamService.getById(latestCompletionStartup.getStartupParamEsId()).getEncodedSharedContextSnapshotAtCompletion();
-            }
-        }
-        startupParam.setUpdateTime(new Date());
-        startupParam.setEncodedSharedContextSnapshotAtStartup(latestParentStageEncodedSharedContext);
-        stageStartupParamService.update(stageStartup.getStartupParamEsId(), startupParam);
+        StageDefinition stageDefinition = stageDefinitionServiceWrapper.selectByTaskIdStageName(taskStartup.getTaskId(), stageName);
+        VerifyUtil.shallNotBeNull(stageDefinition,
+                String.format("taskId为%d的任务定义中无法找到唯一的一个name为%s的stage", taskStartup.getTaskId(), stageName));
 
 
-        StartWorkerStageReq startWorkerStageReq = new StartWorkerStageReq();
-        StartWorkerStageReq.StageStartupData stageStartupData = new StartWorkerStageReq.StageStartupData();
+        StageStartupExample stageStartupExample = new StageStartupExample();
+        stageStartupExample.createCriteria()
+                .andTaskExecutionIdEqualTo(taskExecutionId)
+                .andStageIdEqualTo(stageDefinition.getId())
+                .andStatusEqualTo(TaskStageStatus.PENDING.getStatus());
+        List<StageStartup> stageStartups = stageStartupService.selectByExample(stageStartupExample);
+        VerifyUtil.shallBeTrue(stageStartups.size() == 1,
+                String.format("无法找到stage startup对象（taskExecutionId: %d, stageId: %d, status: %d）", taskExecutionId,
+                        stageDefinition.getId(), TaskStageStatus.PENDING.getStatus())
+        );
+        StageStartup stageStartup = stageStartups.get(0);
+        stageStartupServiceWrapper.updateSelectiveById(stageStartup.getId(),new StageStartup().withStatus(TaskStageStatus.RUNNING.getStatus()));
 
-        stageStartupData.setStageName(stageDefinition.getName());
-        stageStartupData.setStageVersion(stageDefinition.getVersion());
-        stageStartupData.setStageStartupId(stageStartupId);
-        stageStartupData.setTaskStartupId(taskExecution.getTaskStartupId());
-        stageStartupData.setTaskName(taskDefinition.getName());
-        stageStartupData.setTaskVersion(taskDefinition.getVersion());
-        stageStartupData.setEncodedInput(startupParam.getEncodedInput());
-        stageStartupData.setEncodedSharedContext(latestParentStageEncodedSharedContext);
+        ESPojoDTO<StageStartupParam> stageStartupParamESPojoDTO = stageStartupParamService.getByStageStartupId(stageStartup.getId());
+        stageStartupParamESPojoDTO.getData().setEncodedSharedContextSnapshotAtStartup(encodedSharedContextSnapshotAtStartup);
+        stageStartupParamService.update(stageStartupParamESPojoDTO.getId(),stageStartupParamESPojoDTO.getData());
 
-        startWorkerStageReq.setData(StartWorkerStageReq.Data.builder().startupDataList(List.of(stageStartupData)).build());
+        List<StageExecution> stageExecutions = stageExecutionServiceWrapper.selectByStartupId(stageStartup.getId(),
+                TaskStageStatus.PENDING.getStatus());
+        VerifyUtil.shallBeTrue(stageExecutions.size() == 1,
+                String.format("无法找到StageExecution对象（startUpId: %d, status: %d）", stageStartup.getId(),
+                        TaskStageStatus.PENDING.getStatus()));
+        StageExecution stageExecution = stageExecutions.get(0);
+        stageExecutionServiceWrapper.updateSelectiveById(stageExecution.getId(),new StageExecution().withStatus(TaskStageStatus.RUNNING.getStatus()));
 
-        String workerAddr = taskExecution.getAssignedWorkerAddr();
-        URI workerURI = workerClusterManager.getWorkerURI(workerAddr);
-        StartWorkerStageResp resp = workerTaskDriverClient.startStage(workerURI, startWorkerStageReq);
-
-        if (!resp.getData().getStageStartResultList().isEmpty() && resp.getData().getStageStartResultList().size() != 1) {
-            StartWorkerStageResp.StageStartResult stageStartResult = resp.getData().getStageStartResultList().get(0);
-            if (stageStartResult.getResult() == StartWorkerStageResp.StageStartResult.Result.SUCCEEDED) {
-                stageStartupServiceWrapper.updateSelectiveById(stageStartupId,
-                        new StageStartup().withStatus(TaskStageStatus.RUNNING.getStatus()));
-                StageExecution stageExecution = new StageExecution()
-                        .withStageStartupId(stageStartupId)
-                        .withStatus(TaskStageStatus.RUNNING.getStatus())
-                        .withWorkerAddress(workerAddr);
-                stageExecutionService.create(stageExecution);
-            } else {
-                stageStartupServiceWrapper.updateSelectiveById(stageStartupId,
-                        new StageStartup().withStatus(TaskStageStatus.FAILED_TO_START.getStatus()));
-            }
-        }
-
+        return new Tuple2<>(stageStartup.getId(),stageStartupParamESPojoDTO.getData().getEncodedInput());
 
     }
 }
